# dtc-portable

./: .gitmodules  Makefile.am  Makefile.wrapper.in  README  configure.ac
lib/: .gitignore
m4/: .gitignore  gnulib-cache.m4
